k8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-server-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: server
  template:
    metadata:
      labels:
        component: server
    spec:
      containers:
        - name: hello-world-server
          image: carlosfn224/hello-world-api:v1
          ports:
            - containerPort: 3000
