k8s/server-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-server-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: server
  ports:
    - port: 3000
      targetPort: 3000
